--- a/css/all.css
+++ b/css/all.css
@@ -52,7 +52,7 @@ h1 .critical {
 	text-transform: uppercase;
 }
 
-h1 .thinking {
+h1 .thinkers {
 	display: block;
 	background-color: #2c7ad0;
 	text-align: center;
@@ -62,7 +62,7 @@ h1 .thinking {
 	padding: 0px 30px 2px 27px;
 }
 
-h1 .papers {
+h1 .paper {
 	display: block;
 	writing-mode: tb-rl;
 	-webkit-transform: rotate(-90deg);	
@@ -73,9 +73,9 @@ h1 .papers {
 	position: absolute;
 	right: 10px; /* TODO */
 	bottom: 19px; /* TODO */
-	font-size: 19px;
+	font-size: 22px;
 	background-color: blue;
-	padding: 2px 8px;
+	padding: 1px 8px;
 }
 
 *:first-child+html h1 .papers { right: -28px; /* TODO */ } /* IE7 positions element differently to IE6 & 8 */
